Bug 236007 - Percentage word spacing doesn't incorporate synthetic bold expansion
Summary: Percentage word spacing doesn't incorporate synthetic bold expansion
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Myles C. Maxfield
URL:
Keywords: InRadar
: 236002 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-02-01 23:52 PST by Myles C. Maxfield
Modified: 2022-02-02 17:00 PST (History)
8 users (show)

See Also:


Attachments
Patch (5.29 KB, patch)
2022-02-01 23:54 PST, Myles C. Maxfield
no flags Details | Formatted Diff | Diff
Patch (6.50 KB, patch)
2022-02-02 13:46 PST, Myles C. Maxfield
ews-feeder: commit-queue-
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Myles C. Maxfield 2022-02-01 23:52:17 PST
Percentage word spacing doesn't incorporate synthetic bold expansion
Comment 1 Myles C. Maxfield 2022-02-01 23:54:18 PST
Created attachment 450623 [details]
Patch
Comment 2 Myles C. Maxfield 2022-02-01 23:55:21 PST
*** Bug 236002 has been marked as a duplicate of this bug. ***
Comment 3 Myles C. Maxfield 2022-02-02 00:05:05 PST
Maybe this whole thing is going away? https://github.com/w3c/csswg-drafts/issues/2165#issuecomment-431790488
Comment 4 Myles C. Maxfield 2022-02-02 00:05:30 PST
... or maybe not: https://github.com/w3c/csswg-drafts/issues/3232
Comment 5 Myles C. Maxfield 2022-02-02 13:46:25 PST
Created attachment 450695 [details]
Patch
Comment 6 EWS 2022-02-02 15:58:29 PST
Committed r289007 (246720@main): <https://commits.webkit.org/246720@main>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 450695 [details].
Comment 7 Radar WebKit Bug Importer 2022-02-02 15:59:21 PST
<rdar://problem/88406042>