Percentage word spacing doesn't incorporate synthetic bold expansion https://bugs.webkit.org/show_bug.cgi?id=236007

Reviewed by Alan Bujtas.

Source/WebCore:

The solution is to copy the approach in https://trac.webkit.org/changeset/288944/webkit
to make sure the space glyph works correctly with synthetic bold and fallback fonts.

This also renames FontCascade::spaceWidth() to FontCascade::widthOfSpaceString(),
so it's more clear what it's actually doing.

Test: fast/text/synthetic-bold-percentage-word-spacing.html

* platform/graphics/FontCascade.h:
(WebCore::FontCascade::metricsOfPrimaryFont const):
(WebCore::FontCascade::spaceWidth const): Deleted.
* rendering/style/RenderStyle.cpp:
(WebCore::RenderStyle::setWordSpacing):

LayoutTests:

* fast/text/synthetic-bold-percentage-word-spacing-expected.html: Added.
* fast/text/synthetic-bold-percentage-word-spacing.html: Added.



Canonical link: https://commits.webkit.org/246720@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289007 268f45cc-cd09-0410-ab3c-d52691b4dbfc